# Digital-Geometry-Precessing

./: .gitignore  CMakeLists.txt
include/Math/: Mrgb.h
include/PolyMesh/: MemoryPool.h  PolyMesh_Base.h
src/: AABB_Tree.cpp
src/hw_1/: Algorithm.cpp  Algorithm.h  main.cpp
